--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-LL Compiler is a small Little Lisp Language compiler. Developed by Danil Tumaykin and Igor Dultsev at Intel WS2012 at NGU-Intel Lab.
+LL Compiler is a small Little Lisp Language compiler. Developed by Danil Tumaykin and Igor Dultsev at Intel WS2012 at NSU-Intel Lab.
 
 Further documentation is available at http://www.i-lab.nsu.ru/wiki/index.php/LL_Compiler.
